--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ add_executable (owo
 
 # Set vars
 set(CMAKE_MODULE_PATH lib)
-set(EXTERNAL_LIB_HEADERS lib/curlpp/include lib/indicators/include lib/json/include)
+set(EXTERNAL_LIB_HEADERS lib/curlpp/include lib/indicators/include lib/json/include lib/toml11)
 
 # Compile curlpp
 add_subdirectory(lib/curlpp)
@@ -26,8 +26,11 @@ add_subdirectory(lib/indicators)
 # Compile json
 add_subdirectory(lib/json)
 
+# Compile toml
+add_subdirectory(lib/toml11)
+
 # Include libraries
 target_include_directories(owo PRIVATE ${EXTERNAL_LIB_HEADERS})
 
 # Link libraries
-target_link_libraries(owo PUBLIC curlpp indicators nlohmann_json)
+target_link_libraries(owo PUBLIC curlpp indicators nlohmann_json toml11)
