--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ add_executable (owo
 
 # Set vars
 set(CMAKE_MODULE_PATH lib)
-set(EXTERNAL_LIB_HEADERS lib/curlpp/include lib/clipp/include lib/indicators/include lib/json/include lib/toml11)
+set(EXTERNAL_LIB_HEADERS lib/curlpp/include lib/clipp/include lib/indicators/include lib/json/include lib/toml11 lib/zlib)
 set(OPENSSL_USE_STATIC_LIBS TRUE)
 
 # Compile curlpp
@@ -32,10 +32,13 @@ add_subdirectory(lib/json)
 # Compile toml
 add_subdirectory(lib/toml11)
 
+# Compile toml
+add_subdirectory(lib/zlib)
+
 find_package(OpenSSL REQUIRED)
 
 # Include libraries
 target_include_directories(owo PRIVATE ${EXTERNAL_LIB_HEADERS})
 
 # Link libraries
-target_link_libraries(owo PUBLIC curlpp indicators nlohmann_json toml11 OpenSSL::SSL)
+target_link_libraries(owo PUBLIC curlpp indicators nlohmann_json toml11 OpenSSL::SSL zlib)
