Update and refactor code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,19 @@ set (CMAKE_CXX_STANDARD 17)
 
 project ("owo-pkg")
 add_executable (owo
-"src/owo-pkg.cpp"
+"src/main.cpp"
+"src/owopkg.cpp"
 "src/shared.cpp"
-"src/core/cli.cpp"
 "src/core/crypto.cpp"
 "src/core/http.cpp"
+"src/core/database.cpp"
 "src/repository/repository.cpp"
 "src/repository/repository-manager.cpp"
 "src/commands/install.cpp"
 "src/commands/remove.cpp"
 "src/commands/search.cpp"
 "src/commands/update.cpp"
+"src/utils/platform.cpp"
 )
 
 # Set vars
@@ -30,9 +32,10 @@ find_package(indicators CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(toml11 CONFIG REQUIRED)
 find_package(clipp CONFIG REQUIRED)
+find_package(unofficial-sqlite3 CONFIG REQUIRED)
 
 # Include libraries
 target_include_directories(owo PRIVATE) # ${EXTERNAL_LIB_HEADERS})
 
 # Link libraries
-target_link_libraries(owo PUBLIC unofficial::curlpp::curlpp indicators::indicators clipp::clipp nlohmann_json nlohmann_json::nlohmann_json toml11::toml11 OpenSSL::SSL ZLIB::ZLIB)
+target_link_libraries(owo PUBLIC unofficial::curlpp::curlpp indicators::indicators clipp::clipp nlohmann_json nlohmann_json::nlohmann_json toml11::toml11 OpenSSL::SSL ZLIB::ZLIB unofficial::sqlite3::sqlite3)
